[gd_scene load_steps=30 format=3 uid="uid://b4gn8b1bd20cp"]

[ext_resource type="Script" uid="uid://dmua2ks2bxcsb" path="res://scripts/enemies/rat.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dgkhk1usro8r6" path="res://assets/sprites/enemy/ratalheiro.png" id="5_fxid1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qn0ow"]
atlas = ExtResource("5_fxid1")
region = Rect2(0, 146, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_t678g"]
atlas = ExtResource("5_fxid1")
region = Rect2(84, 146, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw7qc"]
atlas = ExtResource("5_fxid1")
region = Rect2(168, 146, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_vour6"]
atlas = ExtResource("5_fxid1")
region = Rect2(252, 146, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_oimh3"]
atlas = ExtResource("5_fxid1")
region = Rect2(336, 146, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lpa"]
atlas = ExtResource("5_fxid1")
region = Rect2(0, 292, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph0bb"]
atlas = ExtResource("5_fxid1")
region = Rect2(84, 292, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vaeb"]
atlas = ExtResource("5_fxid1")
region = Rect2(168, 292, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8n63"]
atlas = ExtResource("5_fxid1")
region = Rect2(252, 292, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_orb1r"]
atlas = ExtResource("5_fxid1")
region = Rect2(420, 219, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur0id"]
atlas = ExtResource("5_fxid1")
region = Rect2(504, 219, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ars0e"]
atlas = ExtResource("5_fxid1")
region = Rect2(588, 219, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohayx"]
atlas = ExtResource("5_fxid1")
region = Rect2(0, 0, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl5i1"]
atlas = ExtResource("5_fxid1")
region = Rect2(84, 0, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1pi2"]
atlas = ExtResource("5_fxid1")
region = Rect2(168, 0, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_fffwg"]
atlas = ExtResource("5_fxid1")
region = Rect2(252, 0, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_6756y"]
atlas = ExtResource("5_fxid1")
region = Rect2(0, 73, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxid1"]
atlas = ExtResource("5_fxid1")
region = Rect2(84, 73, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac66d"]
atlas = ExtResource("5_fxid1")
region = Rect2(168, 73, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_hajvu"]
atlas = ExtResource("5_fxid1")
region = Rect2(252, 73, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujef0"]
atlas = ExtResource("5_fxid1")
region = Rect2(336, 73, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_h50a5"]
atlas = ExtResource("5_fxid1")
region = Rect2(420, 73, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_1spx8"]
atlas = ExtResource("5_fxid1")
region = Rect2(504, 73, 84, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_hclp1"]
atlas = ExtResource("5_fxid1")
region = Rect2(588, 73, 84, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_rat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn0ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t678g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw7qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vour6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oimh3")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph0bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vaeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8n63")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_orb1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur0id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ars0e")
}],
"loop": false,
"name": &"hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohayx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl5i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1pi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fffwg")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6756y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxid1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hajvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujef0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h50a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1spx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hclp1")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="CollisionShape2D_rat"]
size = Vector2(47, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qn0ow"]
size = Vector2(600, 144)

[node name="Rat" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -25)
sprite_frames = SubResource("SpriteFrames_rat")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -15.5)
shape = SubResource("CollisionShape2D_rat")

[node name="DetectionArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -58)
shape = SubResource("RectangleShape2D_qn0ow")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="PlatformRayRight" type="RayCast2D" parent="."]
position = Vector2(16, 12)
target_position = Vector2(0, 20)

[node name="PlatformRayLeft" type="RayCast2D" parent="."]
position = Vector2(-16, 12)
target_position = Vector2(0, 20)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -54.0
max_value = 30.0
value = 30.0
show_percentage = false
